fix row-gap

--- a/src/components/FormCalculator/index.scss
+++ b/src/components/FormCalculator/index.scss
@@ -46,7 +46,7 @@
     }
 
     @media (max-width: 767px) {
-      row-gap: 20px;
+      row-gap: 35px;
     }
   }
 }
